<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/coffee"
        android:layout_weight="5"
        >

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frank_coffee"
            android:textColor="#FFFFFF"
            android:fontFamily="cursive"
            android:textSize="30sp"
            />

    </LinearLayout>

    <RelativeLayout
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"
            android:textStyle=""/>

        <ImageView
            android:src="@drawable/telephone"
            android:id="@+id/p_telephone"
            android:layout_marginTop="10dp"
            android:layout_below="@id/name"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="telephone" />

        <TextView
            android:id="@+id/t_telephone"
            android:paddingTop="3dp"
            android:paddingLeft="10dp"
            android:layout_toRightOf="@id/p_telephone"
            android:layout_alignTop="@id/p_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textSize="16sp"/>

        <ImageView
            android:src="@drawable/address"
            android:id="@+id/p_address"
            android:layout_marginTop="10dp"
            android:layout_below="@id/p_telephone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="telephone" />

        <TextView
            android:id="@+id/t_address"
            android:paddingTop="3dp"
            android:paddingLeft="10dp"
            android:layout_toRightOf="@id/p_address"
            android:layout_alignTop="@id/p_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/description"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:layout_below="@id/p_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </RelativeLayout>

</LinearLayout>
